--- a/app/views/admins/reasignar_centros_del_conector.html.erb
+++ b/app/views/admins/reasignar_centros_del_conector.html.erb
@@ -1,7 +1,7 @@
 <h1>Reasignar Centros</h1>
 <div class="row">
 		<div class ="span5">
-			<h6> Conector #<%= @conector.id %>: <em><%= @conector.username %></em> </h6>
+			<h6> Conector #<%= @conector.id %>: <em><%= @conector.email %></em> </h6>
 		</div>
 		<div class="span3 offset6">
 			<%= link_to '← Volver', reasignar_centros_path, :class => 'btn' %>
