--- a/app/views/centros/_mesas_form.html.erb
+++ b/app/views/centros/_mesas_form.html.erb
@@ -43,4 +43,17 @@
 	</div>
 </div>
 
+<div class="clearfix">
+	<%= f.label :votos_blancos, "Votos blancos" %>
+	<div class="input">
+		<%= f.text_field :votos_blancos, :class => 'mini' %>
+	</div>
+</div>
+
+<div class="clearfix">
+	<%= f.label :votos_nulos, "Votos nulos" %>
+	<div class="input">
+		<%= f.text_field :votos_nulos, :class => 'mini' %>
+	</div>
+</div>
 </fieldset>
