--- a/app/views/centros/cerrar.html.erb
+++ b/app/views/centros/cerrar.html.erb
@@ -1,4 +1,5 @@
 	<h1 id="ultima_llamada">&Uacute;ltima Llamada <small> <%= @centro.nombre %> </small></h1>
+		<h3> <%= @centro.coordinador.nombre %>, Tlfs: <%= @centro.coordinador.telefono1 %>, <%= @centro.coordinador.telefono2 %></h3>
 </div>
 <%= form_for @centro do |f| %>
 <div class="row">
