--- a/app/views/centros/_incidencia_form.html.erb
+++ b/app/views/centros/_incidencia_form.html.erb
@@ -1,4 +1,4 @@
- <% javascript 'anomalias' %>
+<% javascript 'anomalias' %>
 <div class="well fields">
 	<fieldset>
 		<%= f.fields_for :incidencias, Incidencia.new do |i| %>
@@ -16,5 +16,10 @@
 			</div>
 		</div>
 	</fieldset>
+	<div class="input">
+		<!-- <%= link_to_function 'Guardar Incidencia', 'guardar_y_esconder(this.parentNode.parentNode.parentNode)', :class => ['btn', 'primary', 'small'] %> -->
+		<%= link_to_remove_fields 'Cancelar', f %>
+	</div>	
+
 	<% end %>
 </div>
