--- a/app/views/centros/abrir.html.erb
+++ b/app/views/centros/abrir.html.erb
@@ -1,5 +1,5 @@
   <h1>Primera Llamada <small> <%= @centro.nombre %> </small></h1>
-	<h3> <%= @centro.coordinador.nombre %>, Tlfs: <%= @centro.coordinador.telefono1 %>, <%= @centro.coordinador.telefono2 %></h3>
+	<h3> <%= @centro.coordinador.nombre %>, Tlfs: <%= @centro.coordinador.telefono1 %>  <%= @centro.coordinador.telefono2 %></h3>
 </div>
 <%= form_for @centro do |f| %>
 <div class="row">
