--- a/app/views/admins/_usuarios.html.erb
+++ b/app/views/admins/_usuarios.html.erb
@@ -8,7 +8,7 @@
 
 <%= render 'pills' %>
 
-<%= paginate @usuarios %>
+<%= paginate @usuarios, :window => 10 %>
 
 <table class="bordered-table zebra-striped">
 	<thead>
@@ -35,4 +35,4 @@
 	</tbody>
 </table>
 
-<%= paginate @usuarios %>
+<%= paginate @usuarios, :window => 10 %>
