bug fixed: atributo destroy para eliminar incidencias

--- a/app/views/centros/_incidencia_form.html.erb
+++ b/app/views/centros/_incidencia_form.html.erb
@@ -18,7 +18,7 @@
 	</fieldset>
 	<div class="input">
 		<!-- <%= link_to_function 'Guardar Incidencia', 'guardar_y_esconder(this.parentNode.parentNode.parentNode)', :class => ['btn', 'primary', 'small'] %> -->
-		<%= link_to_remove_fields 'Cancelar', f %>
+		<%= link_to_remove_fields 'Cancelar', i %>
 	</div>	
 
 	<% end %>
