--- a/app/views/centros/abrir.html.erb
+++ b/app/views/centros/abrir.html.erb
@@ -1,7 +1,11 @@
   <h1>Primera Llamada <small> <%= @centro.nombre %> </small></h1>
-	<h3> <%= @centro.coordinador.nombre %>, Tlfs: <%= @centro.coordinador.telefono1 %>  <%= @centro.coordinador.telefono2 %></h3>
+	<% if @centro.coordinador %>
+	<h3><%= link_to "#{@centro.coordinador.nombre}, Tlfs: #{@centro.coordinador.telefono1}  #{@centro.coordinador.telefono2}", modificar_coordinador_path(@centro) %></h3>
+	<% else  %>
+	<em>Este centro no tiene coordinador</em>
+	<% end  %>
 </div>
-<%= form_for @centro do |f| %>
+<%= form_for @centro, :url => {:action => "abrir"}  do |f| %>
 <div class="row">
 	<div class="span1"> &nbsp; </div>
 	<div class="span6">
@@ -110,9 +114,8 @@
 		</fieldset>
 	</div>
 	<div class="span7">
-		<%= f.fields_for :incidencias, f.object.class.reflect_on_association(:incidencias).klass.new do |builder| %>
-		<%= render 'incidencia_form', :f => builder %>
-		<% end %>
+
+		<%= render 'incidencia_form', :f => f %>
 		
 		<p id="link_add" ><%= link_to_add_fields 'Agregar Nueva Incidencia', f, :incidencias %></p>
 	</div>
