--- a/app/views/centros/abrir.html.erb
+++ b/app/views/centros/abrir.html.erb
@@ -5,7 +5,15 @@
 	<em>Este centro no tiene coordinador</em>
 	<% end  %>
 </div>
-<%= form_for @centro, :url => {:action => "abrir"}  do |f| %>
+<%= form_for @centro, :url => {:action => "abrir_centro"}  do |f| %>
+<% if @centro.errors.any? %>
+	<ul class="erroresval">
+		<% @centro.errors.full_messages.each do |msg| %>
+		<li><%= msg %></li>
+		<% end %>
+	</ul>
+<% end %>
+
 <div class="row">
 	<div class="span1"> &nbsp; </div>
 	<div class="span6">
@@ -115,7 +123,7 @@
 	</div>
 	<div class="span7">
 
-		<%= render 'incidencia_form', :f => f %>
+		<%= render "incidencia_form", :f => f %>
 		
 		<p id="link_add" ><%= link_to_add_fields 'Agregar Nueva Incidencia', f, :incidencias %></p>
 	</div>
